fixes the overlapping (the arabic version)

--- a/media/css/mozorg/history-slides.less
+++ b/media/css/mozorg/history-slides.less
@@ -2250,7 +2250,7 @@
     }
 
     .page-head .intro {
-        margin: 0 auto 1.5em;
+        margin: 30px auto 1.5em;
     }
 
     .links li {
